<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_login">

    <fragment
        android:id="@+id/nav_bills"
        android:name="com.mwaiterdev.waiter.ui.bills.BillsFragment"
        tools:layout="@layout/fragment_bills" >
        <action
            android:id="@+id/action_nav_bills_to_nav_bill"
            app:destination="@id/nav_bill" />
    </fragment>

    <fragment
        android:id="@+id/nav_login"
        android:name="com.mwaiterdev.waiter.ui.login.LoginFragment"
        android:label="@string/menu_login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_nav_login_to_nav_bills"
            app:destination="@id/nav_bills" />
    </fragment>

    <fragment
        android:id="@+id/nav_tables"
        android:name="com.mwaiterdev.waiter.ui.tables.TablesFragment"
        android:label="@string/menu_tables"
        tools:layout="@layout/fragment_tables" />

    <fragment
        android:id="@+id/nav_bill"
        android:name="com.mwaiterdev.waiter.ui.bill.BillFragment"
        android:label="@string/menu_bill"
        tools:layout="@layout/fragment_bill" />
</navigation>