<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.mwaiterdev.waiter.ui.login.LoginFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="@dimen/zero"
        android:layout_height="@dimen/logotype_height"
        android:scaleType="fitCenter"
        android:src="@drawable/logo_waiter"
        app:layout_constraintBottom_toTopOf="@id/text_input_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        android:hint="@string/fragment_login_hint_text"
        app:boxBackgroundColor="@color/white"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:hintAnimationEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="@dimen/fragment_login_default_width"
        app:startIconContentDescription="@string/fragment_login_input_layout_content_description"
        app:startIconDrawable="@drawable/ic_lock">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:inputType="numberPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_btn"
        android:layout_width="@dimen/zero"
        android:layout_height="@dimen/fragment_login_button_height"
        android:text="@string/fragment_login_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_input_layout"
        app:layout_constraintWidth_percent="@dimen/fragment_login_default_width" />

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/text_input_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>